--- a/index.html
+++ b/index.html
@@ -73,113 +73,6 @@
       font-size: 0.9rem;
     }
 
-    /* Sidebar Styling */
-    .sidebar {
-      height: 100%;
-      width: 0;
-      position: fixed;
-      top: 0;
-      left: 0;
-      background-color: #1e1e1e;
-      overflow-x: hidden;
-      transition: 0.5s;
-      padding-top: 60px;
-      z-index: 1000;
-      color: #fff;
-    }
-
-    .sidebar a {
-      padding: 8px 8px 8px 32px;
-      text-decoration: none;
-      font-size: 1.2rem;
-      color: #fff;
-      display: block;
-      transition: 0.3s;
-    }
-
-    .sidebar a:hover {
-      color: #ddd;
-    }
-
-    .sidebar .close-btn {
-      position: absolute;
-      top: 20px;
-      right: 25px;
-      font-size: 36px;
-      color: #fff;
-      cursor: pointer;
-    }
-
-    /* Toggle button for sidebar */
-    .open-sidebar-btn {
-      font-size: 1.5rem;
-      background-color: #d3d3d3; /* Light Gray */
-      color: #333;
-      border: none;
-      cursor: pointer;
-      position: fixed;
-      top: 20px;
-      left: 20px;
-      padding: 10px 20px;
-      border-radius: 5px;
-      z-index: 1100;
-      transition: background-color 0.3s ease;
-    }
-
-    .open-sidebar-btn:hover {
-      background-color: #b0b0b0;
-    }
-
-    /* Chat Input and Output */
-    .chat-container {
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      padding: 1rem;
-    }
-
-    .chat-output {
-      flex-grow: 1;
-      overflow-y: auto;
-      background-color: #333;
-      border-radius: 8px;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      max-height: 70vh;
-    }
-
-    .chat-output div {
-      margin-bottom: 0.5rem;
-    }
-
-    .chat-input {
-      display: flex;
-      align-items: center;
-    }
-
-    .chat-input textarea {
-      width: 80%;
-      padding: 0.8rem;
-      border-radius: 5px;
-      background-color: #222;
-      color: #fff;
-      resize: none;
-      border: 1px solid #ccc;
-      font-size: 1rem;
-    }
-
-    .chat-input button {
-      width: 15%;
-      padding: 0.8rem;
-      background-color: #1e1e1e;
-      color: #fff;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-left: 1rem;
-      font-size: 1rem;
-    }
-
     /* Background Styling */
     .background {
       background: linear-gradient(135deg, #121212, #1e1e1e);
@@ -191,40 +84,6 @@
       z-index: -1;
     }
   </style>
-  <script>
-    // Toggle sidebar visibility
-    function toggleSidebar() {
-      const sidebar = document.getElementById("mySidebar");
-      sidebar.style.width = sidebar.style.width === "300px" ? "0" : "300px";
-    }
-
-    // Send chat message
-    function sendChat() {
-      const input = document.getElementById("chat-input").value.trim();
-      if (input) {
-        const chatOutput = document.getElementById("chat-output");
-        const userMessage = document.createElement("div");
-        userMessage.textContent = `You: ${input}`;
-        chatOutput.appendChild(userMessage);
-
-        // Simulating a bot response
-        const botMessage = document.createElement("div");
-        botMessage.textContent = "ChatGPT: I'm here to chat!";
-        chatOutput.appendChild(botMessage);
-
-        document.getElementById("chat-input").value = "";
-        chatOutput.scrollTop = chatOutput.scrollHeight; // Auto-scroll to the bottom
-      }
-    }
-
-    // Handle Enter key for sending messages
-    document.getElementById("chat-input").addEventListener("keydown", function (event) {
-      if (event.key === "Enter" && !event.shiftKey) {
-        event.preventDefault();
-        sendChat();
-      }
-    });
-  </script>
 </head>
 
 <body>
@@ -233,7 +92,6 @@
 
   <header>
     Soups Gallery
-    <button class="open-sidebar-btn" onclick="toggleSidebar()">Open Chat</button>
   </header>
 
   <div class="game-container">
@@ -267,19 +125,10 @@
     </div>
   </div>
 
-  <!-- Sidebar for ChatGPT -->
-  <div id="mySidebar" class="sidebar">
-    <a href="javascript:void(0)" class="close-btn" onclick="toggleSidebar()">&times;</a>
-    <div class="chat-container">
-      <div id="chat-output" class="chat-output">
-        <!-- Chat history will appear here -->
-      </div>
-      <div class="chat-input">
-        <textarea id="chat-input" rows="3" placeholder="Type your message..."></textarea>
-        <button onclick="sendChat()">Send</button>
-      </div>
-    </div>
-  </div>
-
   <footer>
-    <p>&copy; 2026 Sou
+    <p>&copy; 2026 Soups Gallery | All Rights Reserved</p>
+  </footer>
+
+</body>
+
+</html>
