--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Soups Gallery</title>
+  
+  <!-- Importing the Fredoka font from Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500&display=swap" rel="stylesheet">
+
   <style>
     /* Body and general page styling */
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: 'Fredoka', sans-serif; /* Applying Fredoka font */
       background: #121212;
       color: #fff;
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-    }
+    				
 
     /* Header */
     header {
@@ -31,7 +35,7 @@
     .game-container {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 1.5rem;
+      gap: 2.5rem;
       margin: 2rem 1rem;
       justify-items: center;
     }
