--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Soups Gallery</title>
   
-  <!-- Importing the Fredoka font from Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500&display=swap" rel="stylesheet">
+  <!-- Importing the Fredoka font and Borsok font from Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500&family=Borsok&display=swap" rel="stylesheet">
 
   <style>
     /* Body and general page styling */
     body {
-      font-family: 'Fredoka', sans-serif; /* Applying Fredoka font */
+      font-family: 'Fredoka', sans-serif; /* Applying Fredoka font to body */
       background: #121212;
       color: #fff;
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-    				
+    }
 
     /* Header */
     header {
+      font-family: 'Borsok', sans-serif; /* Applying Borsok font to title */
       background-color: #1e1e1e;
       color: #fff;
       text-align: center;
@@ -35,7 +36,7 @@
     .game-container {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 2.5rem;
+      gap: 1.5rem;
       margin: 2rem 1rem;
       justify-items: center;
     }
