--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Soups Gallery</title>
   
-  <!-- Importing the Fredoka font and Borsok font from Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500&family=Borsok&display=swap" rel="stylesheet">
+  <!-- Importing the Fredoka font from Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500;700&display=swap" rel="stylesheet">
 
   <style>
     /* Body and general page styling */
     body {
-      font-family: 'Fredoka', sans-serif; /* Applying Fredoka font to body */
+      font-family: 'Fredoka', sans-serif; /* Applying Fredoka font */
       background: #121212;
       color: #fff;
       margin: 0;
@@ -22,12 +22,13 @@
 
     /* Header */
     header {
-      font-family: 'Borsok', sans-serif; /* Applying Borsok font to title */
+      font-family: 'Fredoka', sans-serif; /* Ensuring the title uses Fredoka */
       background-color: #1e1e1e;
       color: #fff;
       text-align: center;
-      padding: 1rem;
-      font-size: 2rem;
+      padding: 1.5rem;
+      font-size: 3rem;  /* Bigger font size for title */
+      font-weight: 700; /* Bolder font */
       letter-spacing: 1px;
       position: relative;
     }
