--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     .game-container {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 3rem;
+      gap: 1.5rem;
       margin: 2rem 1rem;
       justify-items: center;
     }
@@ -68,6 +68,16 @@
       font-size: 1.5rem;
       margin: 0;
       color: #fff;
+    }
+
+    /* Pocket Bird Game */
+    #pocket-bird-game {
+      width: 100%;
+      height: 400px; /* Adjust height for a better view */
+      background-color: #333;
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
+      margin: 2rem auto;
     }
 
     /* Footer */
@@ -129,6 +139,11 @@
     <div class="game-card" onclick="window.open('https://catmario.eu/', '_blank')">
       <h3>Cat Mario</h3>
     </div>
+  </div>
+
+  <!-- Pocket Bird Game Embed -->
+  <div id="pocket-bird-game">
+    <iframe src="https://cdn.jsdelivr.net/gh/IdreesInc/Pocket-Bird@main/dist/web/birb.embed.html" width="100%" height="100%" frameborder="0"></iframe>
   </div>
 
   <footer>
