--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
       z-index: -1;
     }
   </style>
+
+  <!-- Pocket Bird Script -->
+  <script src="https://cdn.jsdelivr.net/gh/IdreesInc/Pocket-Bird@main/dist/web/birb.embed.js"></script>
 </head>
 
 <body>
@@ -141,9 +144,9 @@
     </div>
   </div>
 
-  <!-- Pocket Bird Game Embed -->
+  <!-- Pocket Bird Embed -->
   <div id="pocket-bird-game">
-    <iframe src="https://cdn.jsdelivr.net/gh/IdreesInc/Pocket-Bird@main/dist/web/birb.embed.html" width="100%" height="100%" frameborder="0"></iframe>
+    <!-- Pocket Bird will load here once the script runs -->
   </div>
 
   <footer>
