--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500;700&display=swap" rel="stylesheet">
 
   <style>
-    /* Body and general page styling */
+    /* Global Styles */
     body {
-      font-family: 'Fredoka', sans-serif; /* Applying Fredoka font */
+      font-family: 'Fredoka', sans-serif;
       background: #121212;
       color: #fff;
       margin: 0;
@@ -22,15 +22,13 @@
 
     /* Header */
     header {
-      font-family: 'Fredoka', sans-serif; /* Ensuring the title uses Fredoka */
       background-color: #1e1e1e;
       color: #fff;
       text-align: center;
       padding: 1.5rem;
-      font-size: 3rem;  /* Bigger font size for title */
-      font-weight: 700; /* Bolder font */
+      font-size: 3rem;
+      font-weight: 700;
       letter-spacing: 1px;
-      position: relative;
     }
 
     /* Game Cards Container */
@@ -38,16 +36,15 @@
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
       gap: 3rem;
-      margin: 2rem 1rem;
+      padding: 2rem 1rem;
       justify-items: center;
     }
 
-    /* Styling individual game cards */
+    /* Game Card Styling */
     .game-card {
       background-color: #333;
       border-radius: 12px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
-      transition: transform 0.3s ease;
       cursor: pointer;
       text-align: center;
       padding: 2rem 1rem;
@@ -57,23 +54,22 @@
       width: 100%;
       max-width: 300px;
       height: 150px;
+      transition: transform 0.3s ease;
     }
 
     .game-card:hover {
       transform: translateY(-10px);
     }
 
-    /* Game Title Styling */
     .game-card h3 {
       font-size: 1.5rem;
       margin: 0;
-      color: #fff;
     }
 
-    /* Pocket Bird Game */
+    /* Pocket Bird Embed */
     #pocket-bird-game {
       width: 100%;
-      height: 400px; /* Adjust height for a better view */
+      height: 400px;
       background-color: #333;
       border-radius: 12px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
@@ -109,49 +105,37 @@
 
   <div class="background"></div>
 
-  <header>
-    Soups Gallery
-  </header>
+  <header>Soups Gallery</header>
 
   <div class="game-container">
     <!-- Game Cards -->
     <div class="game-card" onclick="window.open('https://veck.io/', '_blank')">
       <h3>Veck</h3>
     </div>
-
     <div class="game-card" onclick="window.open('https://neal.fun/', '_blank')">
       <h3>Neal.fun</h3>
     </div>
-
     <div class="game-card" onclick="window.open('https://eaglercraft.q13x.com/1.8.8/js/?retina=true', '_blank')">
       <h3>Eaglercraft</h3>
     </div>
-
     <div class="game-card" onclick="window.open('https://slowroads.io/', '_blank')">
       <h3>Slow Roads</h3>
     </div>
-
     <div class="game-card" onclick="window.open('https://gamesnacks.com/', '_blank')">
       <h3>Game Snacks</h3>
     </div>
-
     <div class="game-card" onclick="window.open('https://www.kodub.com/apps/polytrack', '_blank')">
       <h3>Polytrack</h3>
     </div>
-
     <div class="game-card" onclick="window.open('https://catmario.eu/', '_blank')">
       <h3>Cat Mario</h3>
     </div>
   </div>
 
   <!-- Pocket Bird Embed -->
-  <div id="pocket-bird-game">
-    <!-- Pocket Bird will load here once the script runs -->
-  </div>
+  <div id="pocket-bird-game"></div>
 
-  <footer>
-    <p>&copy; 2026 Soups Gallery | All Rights Reserved</p>
-  </footer>
+  <footer>&copy; 2026 Soups Gallery | All Rights Reserved</footer>
 
 </body>
 
