--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+      height: 100vh; /* Ensure the body takes up the entire viewport height */
+      display: flex;
+      flex-direction: column;
     }
 
     /* Header */
@@ -38,6 +41,8 @@
       gap: 3rem;
       padding: 2rem 1rem;
       justify-items: center;
+      flex-grow: 1; /* Allow the container to take up remaining space */
+      overflow: auto; /* Add scroll if content exceeds screen */
     }
 
     /* Game Card Styling */
@@ -95,6 +100,23 @@
       bottom: 0;
       z-index: -1;
     }
+
+    /* Button Styles */
+    .go-to-canva {
+      color: #fff;
+      text-decoration: none;
+      padding: 1rem 2rem;
+      background-color: #333;
+      border-radius: 12px;
+      display: inline-block;
+      margin-top: 2rem;
+      font-size: 1.2rem;
+      text-align: center;
+    }
+
+    .go-to-canva:hover {
+      background-color: #444;
+    }
   </style>
 
   <!-- Pocket Bird Script -->
@@ -134,6 +156,9 @@
 
   <!-- Pocket Bird Embed -->
   <div id="pocket-bird-game"></div>
+
+  <!-- Button to go to Canva Page -->
+  <a href="canva.html" class="go-to-canva">Go to Canva</a>
 
   <footer>&copy; 2026 Soups Gallery | All Rights Reserved</footer>
 
