--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
   <header>Soups Gallery</header>
 
   <div class="game-container">
+
+ <!-- Button to go to Canva Page -->
+  <a href="canva.html" class="go-to-canva">Go to Canva</a>
+    
     <!-- Game Cards -->
     <div class="game-card" onclick="window.open('https://veck.io/', '_blank')">
       <h3>Veck</h3>
