--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       height: 100vh; /* Ensure the body takes up the entire viewport height */
       display: flex;
       flex-direction: column;
+      justify-content: space-between;
     }
 
     /* Header */
@@ -59,16 +60,18 @@
       width: 100%;
       max-width: 300px;
       height: 150px;
-      transition: transform 0.3s ease;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     .game-card:hover {
       transform: translateY(-10px);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.7);
     }
 
     .game-card h3 {
       font-size: 1.5rem;
       margin: 0;
+      font-weight: 700;
     }
 
     /* Pocket Bird Embed */
@@ -88,6 +91,8 @@
       text-align: center;
       padding: 1rem;
       font-size: 0.9rem;
+      position: relative;
+      z-index: 2;
     }
 
     /* Background Styling */
@@ -112,6 +117,7 @@
       margin-top: 2rem;
       font-size: 1.2rem;
       text-align: center;
+      transition: background-color 0.3s ease;
     }
 
     .go-to-canva:hover {
@@ -130,33 +136,32 @@
   <header>Soups Gallery</header>
 
   <div class="game-container">
-    
     <!-- Game Cards -->
-    <div class="game-card" onclick="window.open('https://veck.io/', '_blank')">
+    <div class="game-card" onclick="window.open('https://veck.io/', '_blank')" aria-label="Veck game">
       <h3>Veck</h3>
     </div>
-    <div class="game-card" onclick="window.open('https://neal.fun/', '_blank')">
+    <div class="game-card" onclick="window.open('https://neal.fun/', '_blank')" aria-label="Neal.fun games">
       <h3>Neal.fun</h3>
     </div>
-    <div class="game-card" onclick="window.open('https://eaglercraft.q13x.com/1.8.8/js/?retina=true', '_blank')">
+    <div class="game-card" onclick="window.open('https://eaglercraft.q13x.com/1.8.8/js/?retina=true', '_blank')" aria-label="Eaglercraft game">
       <h3>Eaglercraft</h3>
     </div>
-    <div class="game-card" onclick="window.open('https://slowroads.io/', '_blank')">
+    <div class="game-card" onclick="window.open('https://slowroads.io/', '_blank')" aria-label="Slow Roads game">
       <h3>Slow Roads</h3>
     </div>
-    <div class="game-card" onclick="window.open('https://gamesnacks.com/', '_blank')">
+    <div class="game-card" onclick="window.open('https://gamesnacks.com/', '_blank')" aria-label="Game Snacks collection">
       <h3>Game Snacks</h3>
     </div>
-    <div class="game-card" onclick="window.open('https://www.kodub.com/apps/polytrack', '_blank')">
+    <div class="game-card" onclick="window.open('https://www.kodub.com/apps/polytrack', '_blank')" aria-label="Polytrack game">
       <h3>Polytrack</h3>
     </div>
-    <div class="game-card" onclick="window.open('https://catmario.eu/', '_blank')">
+    <div class="game-card" onclick="window.open('https://catmario.eu/', '_blank')" aria-label="Cat Mario game">
       <h3>Cat Mario</h3>
     </div>
   </div>
-  
+
   <!-- Pocket Bird Embed -->
-  <div id="pocket-bird-game"></div>
+  <div id="pocket-bird-game" aria-label="Pocket Bird Game"></div>
   
   <footer>&copy; 2026 Soups Gallery | All Rights Reserved</footer>
 
