--- a/index.html
+++ b/index.html
@@ -10,47 +10,44 @@
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500;700&display=swap" rel="stylesheet">
 
   <style>
-    /* Global Styles */
+    /* Body and general page styling */
     body {
-      font-family: 'Fredoka', sans-serif;
+      font-family: 'Fredoka', sans-serif; /* Applying Fredoka font */
       background: #121212;
       color: #fff;
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      height: 100vh; /* Ensure the body takes up the entire viewport height */
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
     }
 
     /* Header */
     header {
+      font-family: 'Fredoka', sans-serif; /* Ensuring the title uses Fredoka */
       background-color: #1e1e1e;
       color: #fff;
       text-align: center;
       padding: 1.5rem;
-      font-size: 3rem;
-      font-weight: 700;
+      font-size: 3rem;  /* Bigger font size for title */
+      font-weight: 700; /* Bolder font */
       letter-spacing: 1px;
+      position: relative;
     }
 
     /* Game Cards Container */
     .game-container {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 3rem;
-      padding: 2rem 1rem;
+      gap: 1.5rem;
+      margin: 2rem 1rem;
       justify-items: center;
-      flex-grow: 1; /* Allow the container to take up remaining space */
-      overflow: auto; /* Add scroll if content exceeds screen */
     }
 
-    /* Game Card Styling */
+    /* Styling individual game cards */
     .game-card {
       background-color: #333;
       border-radius: 12px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
+      transition: transform 0.3s ease;
       cursor: pointer;
       text-align: center;
       padding: 2rem 1rem;
@@ -60,28 +57,17 @@
       width: 100%;
       max-width: 300px;
       height: 150px;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     .game-card:hover {
       transform: translateY(-10px);
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.7);
     }
 
+    /* Game Title Styling */
     .game-card h3 {
       font-size: 1.5rem;
       margin: 0;
-      font-weight: 700;
-    }
-
-    /* Pocket Bird Embed */
-    #pocket-bird-game {
-      width: 100%;
-      height: 400px;
-      background-color: #333;
-      border-radius: 12px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
-      margin: 2rem auto;
+      color: #fff;
     }
 
     /* Footer */
@@ -91,8 +77,6 @@
       text-align: center;
       padding: 1rem;
       font-size: 0.9rem;
-      position: relative;
-      z-index: 2;
     }
 
     /* Background Styling */
@@ -104,51 +88,52 @@
       right: 0;
       bottom: 0;
       z-index: -1;
-
-    .go-to-canva:hover {
-      background-color: #444;
     }
   </style>
-
-  <!-- Pocket Bird Script -->
-  <script src="https://cdn.jsdelivr.net/gh/IdreesInc/Pocket-Bird@main/dist/web/birb.embed.js"></script>
 </head>
 
 <body>
 
   <div class="background"></div>
 
-  <header>Soups Gallery</header>
+  <header>
+    Soups Gallery
+  </header>
 
   <div class="game-container">
     <!-- Game Cards -->
-    <div class="game-card" onclick="window.open('https://veck.io/', '_blank')" aria-label="Veck game">
+    <div class="game-card" onclick="window.open('https://veck.io/', '_blank')">
       <h3>Veck</h3>
     </div>
-    <div class="game-card" onclick="window.open('https://neal.fun/', '_blank')" aria-label="Neal.fun games">
+
+    <div class="game-card" onclick="window.open('https://neal.fun/', '_blank')">
       <h3>Neal.fun</h3>
     </div>
-    <div class="game-card" onclick="window.open('https://eaglercraft.q13x.com/1.8.8/js/?retina=true', '_blank')" aria-label="Eaglercraft game">
+
+    <div class="game-card" onclick="window.open('https://eaglercraft.q13x.com/1.8.8/js/?retina=true', '_blank')">
       <h3>Eaglercraft</h3>
     </div>
-    <div class="game-card" onclick="window.open('https://slowroads.io/', '_blank')" aria-label="Slow Roads game">
+
+    <div class="game-card" onclick="window.open('https://slowroads.io/', '_blank')">
       <h3>Slow Roads</h3>
     </div>
-    <div class="game-card" onclick="window.open('https://gamesnacks.com/', '_blank')" aria-label="Game Snacks collection">
+
+    <div class="game-card" onclick="window.open('https://gamesnacks.com/', '_blank')">
       <h3>Game Snacks</h3>
     </div>
-    <div class="game-card" onclick="window.open('https://www.kodub.com/apps/polytrack', '_blank')" aria-label="Polytrack game">
+
+    <div class="game-card" onclick="window.open('https://www.kodub.com/apps/polytrack', '_blank')">
       <h3>Polytrack</h3>
     </div>
-    <div class="game-card" onclick="window.open('https://catmario.eu/', '_blank')" aria-label="Cat Mario game">
+
+    <div class="game-card" onclick="window.open('https://catmario.eu/', '_blank')">
       <h3>Cat Mario</h3>
     </div>
   </div>
 
-  <!-- Pocket Bird Embed -->
-  <div id="pocket-bird-game" aria-label="Pocket Bird Game"></div>
-  
-  <footer>&copy; 2026 Soups Gallery | All Rights Reserved</footer>
+  <footer>
+    <p>&copy; 2026 Soups Gallery | All Rights Reserved</p>
+  </footer>
 
 </body>
 
