--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     .game-container {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 3rem;
+      gap: 1.5rem;
       margin: 2rem 1rem;
       justify-items: center;
     }
@@ -99,6 +99,54 @@
       bottom: 0;
       z-index: -1;
     }
+
+    /* Password Section Styling */
+    .password-section {
+      text-align: center;
+      padding: 2rem;
+      background-color: #222;
+      border-radius: 12px;
+      margin: 2rem auto;
+      width: 80%;
+      max-width: 500px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
+    }
+
+    .password-section input {
+      padding: 1rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 8px;
+      width: 80%;
+      margin: 1rem 0;
+      background-color: #444;
+      color: #fff;
+    }
+
+    .password-section button {
+      padding: 1rem 2rem;
+      font-size: 1.2rem;
+      background-color: #333;
+      border-radius: 8px;
+      border: none;
+      color: #fff;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .password-section button:hover {
+      background-color: #444;
+    }
+
+    /* Success Message Styling */
+    .success-message {
+      background-color: #4caf50;
+      color: white;
+      padding: 1rem;
+      border-radius: 8px;
+      display: none;
+      margin-top: 1rem;
+    }
   </style>
 </head>
 
@@ -109,6 +157,14 @@
   <header>
     Soups Gallery
   </header>
+
+  <!-- Password Section -->
+  <div class="password-section">
+    <h2>Enter Password</h2>
+    <input type="password" id="password" placeholder="Enter your password">
+    <button onclick="checkPassword()">Submit</button>
+    <div class="success-message" id="success-message">Access Granted!</div>
+  </div>
 
   <div class="game-container">
     <!-- Game Cards -->
@@ -146,6 +202,22 @@
 
   <!-- Pocket Bird Script -->
   <script src="https://cdn.jsdelivr.net/gh/IdreesInc/Pocket-Bird@main/dist/web/birb.embed.js"></script>
+
+  <!-- Password Check Script -->
+  <script>
+    function checkPassword() {
+      const password = document.getElementById('password').value;
+      const correctPassword = "282012"; // Change this to your desired password
+      const successMessage = document.getElementById('success-message');
+      
+      if (password === correctPassword) {
+        successMessage.style.display = 'block';  // Show success message
+        // You can also add additional actions here (e.g., show hidden content, redirect, etc.)
+      } else {
+        alert("Incorrect password! Try again.");
+      }
+    }
+  </script>
 
   <footer>
     <p>&copy; 2026 Soups Gallery | All Rights Reserved</p>
