--- a/index.html
+++ b/index.html
@@ -202,6 +202,23 @@
       <div class="game-card" onclick="window.open('https://catmario.eu/', '_blank')">
         <h3>Cat Mario</h3>
       </div>
+
+      <!-- New Game Links -->
+      <div class="game-card" onclick="window.open('https://scratch.mit.edu/projects/523967150/', '_blank')">
+        <h3>Among Us</h3>
+      </div>
+
+      <div class="game-card" onclick="window.open('https://scratch.mit.edu/projects/551905179/', '_blank')">
+        <h3>PIXEL VALLEY Online</h3>
+      </div>
+
+      <div class="game-card" onclick="window.open('https://scratch.mit.edu/projects/390983761/', '_blank')">
+        <h3>Getting Over It Online</h3>
+      </div>
+
+      <div class="game-card" onclick="window.open('https://turbowarp.org/1115559391/fullscreen?fps=60&clones=Infinity&limitless&hqpen&size=640x360', '_blank')">
+        <h3>Downgrade2 Online</h3>
+      </div>
     </div>
 
     <!-- Pocket Bird Embed -->
