--- a/index.html
+++ b/index.html
@@ -259,4 +259,5 @@
       const content = document.getElementById('content');
       const passwordSection = document.getElementById('password-section');
       
-     
+      if (password === correctPassword) {
+        successMessage.style.display = '
