--- a/index.html
+++ b/index.html
@@ -152,24 +152,6 @@
     .hidden-content {
       display: none;
     }
-
-    /* Button for leading to iframe page */
-    .iframe-button {
-      display: block;
-      margin: 2rem auto;
-      padding: 1rem 2rem;
-      font-size: 1.2rem;
-      background-color: #333;
-      border-radius: 8px;
-      color: #fff;
-      cursor: pointer;
-      text-align: center;
-      transition: background-color 0.3s;
-    }
-
-    .iframe-button:hover {
-      background-color: #444;
-    }
   </style>
 </head>
 
@@ -239,9 +221,6 @@
       </div>
     </div>
 
-    <!-- Button to Open the New Page with iframe -->
-    <a href="canva.html" class="iframe-button">Go to Canva Page</a>
-
     <!-- Pocket Bird Embed -->
     <div id="pocket-bird-game"></div>
   </div>
@@ -260,4 +239,26 @@
       const passwordSection = document.getElementById('password-section');
       
       if (password === correctPassword) {
-        successMessage.style.display = '
+        successMessage.style.display = 'block';  // Show success message
+        content.style.display = 'block';  // Show the website content
+        passwordSection.style.display = 'none';  // Hide the password section
+      } else {
+        alert("Incorrect password! Try again.");
+      }
+    }
+
+    // Add event listener to input field for 'Enter' key
+    document.getElementById('password').addEventListener('keypress', function(event) {
+      if (event.key === 'Enter') {
+        checkPassword();  // Submit the password if Enter is pressed
+      }
+    });
+  </script>
+
+  <footer>
+    <p>&copy; 2026 Soups Gallery | All Rights Reserved</p>
+  </footer>
+
+</body>
+
+</html>
