--- a/index.html
+++ b/index.html
@@ -221,6 +221,10 @@
       </div>
     </div>
 
+    <div class="game-card" onclick="window.open('https://turbowarp.org/1165334435/fullscreen', '_blank')">
+        <h3>portal (scratch)</h3>
+      </div>
+
     <!-- Pocket Bird Embed -->
     <div id="pocket-bird-game"></div>
   </div>
