--- a/index.html
+++ b/index.html
@@ -5,35 +5,40 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Soups Gallery</title>
-  
-  <!-- Importing the Fredoka font from Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500;700&display=swap" rel="stylesheet">
 
   <style>
-    /* Body and general page styling */
-    body {
-      font-family: 'Fredoka', sans-serif;
-      background: #121212;
-      color: #fff;
-      margin: 0;
-      padding: 0;
+    /* =============================================
+       GLOBAL STYLES
+    ============================================= */
+    *, *::before, *::after {
       box-sizing: border-box;
     }
 
-    /* Header */
-    header {
+    body {
       font-family: 'Fredoka', sans-serif;
-      background-color: #1e1e1e;
+      background: linear-gradient(135deg, #121212, #1e1e1e);
+      min-height: 100vh;
       color: #fff;
+      margin: 0;
+      padding: 0;
+    }
+
+    /* =============================================
+       HEADER
+    ============================================= */
+    header {
+      background-color: #1e1e1e;
       text-align: center;
       padding: 1.5rem;
       font-size: 3rem;
       font-weight: 700;
       letter-spacing: 1px;
-      position: relative;
     }
 
-    /* Game Cards Container */
+    /* =============================================
+       GAME CARDS GRID
+    ============================================= */
     .game-container {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -42,13 +47,11 @@
       justify-items: center;
     }
 
-    /* Styling individual game cards */
     .game-card {
       background-color: #333;
       border-radius: 12px;
       box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
       transition: transform 0.3s ease;
-      cursor: pointer;
       text-align: center;
       padding: 2rem 1rem;
       display: flex;
@@ -57,50 +60,24 @@
       width: 100%;
       max-width: 300px;
       height: 150px;
+      text-decoration: none;
+      color: #fff;
     }
 
-    .game-card:hover {
+    .game-card:hover,
+    .game-card:focus {
       transform: translateY(-10px);
+      outline: 2px solid #888;
     }
 
-    /* Game Title Styling */
     .game-card h3 {
       font-size: 1.5rem;
       margin: 0;
-      color: #fff;
     }
 
-    /* Pocket Bird Embed Styling */
-    #pocket-bird-game {
-      width: 100%;
-      height: 400px;
-      background-color: #333;
-      border-radius: 12px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.5);
-      margin: 2rem auto;
-    }
-
-    /* Footer */
-    footer {
-      background-color: #1e1e1e;
-      color: #fff;
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-    }
-
-    /* Background Styling */
-    .background {
-      background: linear-gradient(135deg, #121212, #1e1e1e);
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      z-index: -1;
-    }
-
-    /* Password Section Styling */
+    /* =============================================
+       PASSWORD SECTION
+    ============================================= */
     .password-section {
       text-align: center;
       padding: 2rem;
@@ -115,6 +92,7 @@
     .password-section input {
       padding: 1rem;
       font-size: 1rem;
+      font-family: 'Fredoka', sans-serif;
       border: none;
       border-radius: 8px;
       width: 80%;
@@ -126,6 +104,7 @@
     .password-section button {
       padding: 1rem 2rem;
       font-size: 1.2rem;
+      font-family: 'Fredoka', sans-serif;
       background-color: #333;
       border-radius: 8px;
       border: none;
@@ -134,13 +113,13 @@
       transition: background-color 0.3s;
     }
 
-    .password-section button:hover {
+    .password-section button:hover,
+    .password-section button:focus {
       background-color: #444;
     }
 
-    /* Success Message Styling */
-    .success-message {
-      background-color: #4caf50;
+    .error-message {
+      background-color: #c0392b;
       color: white;
       padding: 1rem;
       border-radius: 8px;
@@ -148,7 +127,16 @@
       margin-top: 1rem;
     }
 
-    /* Hide the content until the password is entered */
+    /* =============================================
+       FOOTER
+    ============================================= */
+    footer {
+      background-color: #1e1e1e;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+    }
+
     .hidden-content {
       display: none;
     }
@@ -157,112 +145,106 @@
 
 <body>
 
-  <div class="background"></div>
+  <header>Soups Gallery</header>
 
-  <header>
-    Soups Gallery
-  </header>
-
-  <!-- Password Section -->
+  <!-- Password gate -->
+  <!-- NOTE: This is NOT truly secure — anyone can view the page source
+       and find the password. It's just a basic barrier, not real protection. -->
   <div class="password-section" id="password-section">
     <h2>Enter Password</h2>
-    <input type="password" id="password" placeholder="Enter your password">
-    <button onclick="checkPassword()">Submit</button>
-    <div class="success-message" id="success-message">Access Granted!</div>
-  </div>
-
-  <!-- Hidden Content (Only visible after password is entered correctly) -->
-  <div class="hidden-content" id="content">
-    <div class="game-container">
-      <!-- Game Cards -->
-      <div class="game-card" onclick="window.open('https://veck.io/', '_blank')">
-        <h3>Veck</h3>
-      </div>
-
-      <div class="game-card" onclick="window.open('https://neal.fun/', '_blank')">
-        <h3>Neal.fun</h3>
-      </div>
-
-      <div class="game-card" onclick="window.open('https://eaglercraft.q13x.com/1.8.8/js/?retina=true', '_blank')">
-        <h3>Eaglercraft</h3>
-      </div>
-
-      <div class="game-card" onclick="window.open('https://slowroads.io/', '_blank')">
-        <h3>Slow Roads</h3>
-      </div>
-
-      <div class="game-card" onclick="window.open('https://gamesnacks.com/', '_blank')">
-        <h3>Game Snacks</h3>
-      </div>
-
-      <div class="game-card" onclick="window.open('https://www.kodub.com/apps/polytrack', '_blank')">
-        <h3>Polytrack</h3>
-      </div>
-
-      <div class="game-card" onclick="window.open('https://catmario.eu/', '_blank')">
-        <h3>Cat Mario</h3>
-      </div>
-
-      <!-- New Game Links -->
-      <div class="game-card" onclick="window.open('https://scratch.mit.edu/projects/523967150/', '_blank')">
-        <h3>Among Us</h3>
-      </div>
-
-      <div class="game-card" onclick="window.open('https://scratch.mit.edu/projects/551905179/', '_blank')">
-        <h3>PIXEL VALLEY Online</h3>
-      </div>
-
-      <div class="game-card" onclick="window.open('https://scratch.mit.edu/projects/390983761/', '_blank')">
-        <h3>Getting Over It Online</h3>
-      </div>
-
-      <div class="game-card" onclick="window.open('https://turbowarp.org/1115559391/fullscreen?fps=60&clones=Infinity&limitless&hqpen&size=640x360', '_blank')">
-        <h3>Downgrade2 Online</h3>
-      </div>
+    <input type="password" id="password-input" placeholder="Enter your password" aria-label="Password">
+    <br>
+    <button id="submit-btn">Submit</button>
+    <div class="error-message" id="error-message" role="alert">
+      Incorrect password. Try again.
     </div>
-
-    <div class="game-card" onclick="window.open('https://turbowarp.org/1165334435/fullscreen', '_blank')">
-        <h3>portal (scratch)</h3>
-      </div>
-
-    <!-- Pocket Bird Embed -->
-    <div id="pocket-bird-game"></div>
   </div>
 
-  <!-- Pocket Bird Script -->
-  <script src="https://cdn.jsdelivr.net/gh/IdreesInc/Pocket-Bird@main/dist/web/birb.embed.js"></script>
-
-  <!-- Password Check Script -->
-  <script>
-    // Function to check password
-    function checkPassword() {
-      const password = document.getElementById('password').value;
-      const correctPassword = "2244"; // Change this to your desired password
-      const successMessage = document.getElementById('success-message');
-      const content = document.getElementById('content');
-      const passwordSection = document.getElementById('password-section');
-      
-      if (password === correctPassword) {
-        successMessage.style.display = 'block';  // Show success message
-        content.style.display = 'block';  // Show the website content
-        passwordSection.style.display = 'none';  // Hide the password section
-      } else {
-        alert("Incorrect password! Try again.");
-      }
-    }
-
-    // Add event listener to input field for 'Enter' key
-    document.getElementById('password').addEventListener('keypress', function(event) {
-      if (event.key === 'Enter') {
-        checkPassword();  // Submit the password if Enter is pressed
-      }
-    });
-  </script>
+  <!-- This section is hidden until the correct password is entered -->
+  <div class="hidden-content" id="main-content">
+    <div class="game-container" id="game-container">
+      <!-- Cards are generated automatically from the SITES list in the script below -->
+    </div>
+  </div>
 
   <footer>
     <p>&copy; 2026 Soups Gallery | All Rights Reserved</p>
   </footer>
 
-</body>
+  <script>
 
+    /* =============================================
+       ★ ADD YOUR SITES HERE ★
+       To add a new site, copy one of the lines below
+       and change the name and url.
+       Example:
+         { name: "Cool Site", url: "https://example.com" },
+    ============================================= */
+    const SITES = [
+      { name: "Veck",                   url: "https://veck.io/" },
+      { name: "Neal.fun",               url: "https://neal.fun/" },
+      { name: "Eaglercraft",            url: "https://eaglercraft.q13x.com/1.8.8/js/?retina=true" },
+      { name: "Slow Roads",             url: "https://slowroads.io/" },
+      { name: "Game Snacks",            url: "https://gamesnacks.com/" },
+      { name: "Polytrack",              url: "https://www.kodub.com/apps/polytrack" },
+      { name: "Cat Mario",              url: "https://catmario.eu/" },
+      { name: "Among Us",               url: "https://scratch.mit.edu/projects/523967150/" },
+      { name: "PIXEL VALLEY Online",    url: "https://scratch.mit.edu/projects/551905179/" },
+      { name: "Getting Over It Online", url: "https://scratch.mit.edu/projects/390983761/" },
+      { name: "Downgrade2 Online",      url: "https://turbowarp.org/1115559391/fullscreen?fps=60&clones=Infinity&limitless&hqpen&size=640x360" },
+    ];
+
+    /* =============================================
+       ★ CHANGE THE PASSWORD HERE ★
+    ============================================= */
+    const PASSWORD = "2244";
+
+
+    /* =============================================
+       Everything below this point runs the page.
+       You don't need to edit anything below here!
+    ============================================= */
+
+    // Build the site cards from the SITES list above
+    function buildCards() {
+      const container = document.getElementById('game-container');
+
+      SITES.forEach(function(site) {
+        const card = document.createElement('a');
+        card.className = 'game-card';
+        card.href = site.url;
+        card.target = '_blank';
+        card.rel = 'noopener noreferrer';
+        card.innerHTML = '<h3>' + site.name + '</h3>';
+        container.appendChild(card);
+      });
+    }
+
+    // Check if the entered password is correct
+    function checkPassword() {
+      const input = document.getElementById('password-input');
+      const errorMessage = document.getElementById('error-message');
+
+      if (input.value === PASSWORD) {
+        document.getElementById('password-section').style.display = 'none';
+        document.getElementById('main-content').style.display = 'block';
+      } else {
+        errorMessage.style.display = 'block';
+        input.value = '';
+        input.focus();
+      }
+    }
+
+    // Allow pressing Enter in the password field to submit
+    document.getElementById('submit-btn').addEventListener('click', checkPassword);
+    document.getElementById('password-input').addEventListener('keypress', function(event) {
+      if (event.key === 'Enter') checkPassword();
+    });
+
+    // Build the cards when the page loads
+    buildCards();
+
+  </script>
+
+</body>
 </html>
