Remove empty line before script tag

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   </footer>
 
   <script>
-
+<script src="https://cdn.jsdelivr.net/gh/IdreesInc/Pocket-Bird@main/dist/web/birb.embed.js"></script>
     /* =============================================
        ★ ADD YOUR SITES HERE ★
        To add a new site, copy one of the lines below
