--- a/index.html
+++ b/index.html
@@ -171,8 +171,10 @@
     <p>&copy; 2026 Soups Gallery | All Rights Reserved</p>
   </footer>
 
+  <!-- Pocket Bird embed (moved outside the main script block) -->
+  <script src="https://cdn.jsdelivr.net/gh/IdreesInc/Pocket-Bird@main/dist/web/birb.embed.js"></script>
+
   <script>
-<script src="https://cdn.jsdelivr.net/gh/IdreesInc/Pocket-Bird@main/dist/web/birb.embed.js"></script>
     /* =============================================
        ★ ADD YOUR SITES HERE ★
        To add a new site, copy one of the lines below
@@ -192,7 +194,7 @@
       { name: "PIXEL VALLEY Online",    url: "https://scratch.mit.edu/projects/551905179/" },
       { name: "Getting Over It Online", url: "https://scratch.mit.edu/projects/390983761/" },
       { name: "Downgrade2 Online",      url: "https://turbowarp.org/1115559391/fullscreen?fps=60&clones=Infinity&limitless&hqpen&size=640x360" },
-         { name: "portal (scratch)", url: "https://turbowarp.org/1165334435/fullscreen" },
+      { name: "portal (scratch)",       url: "https://turbowarp.org/1165334435/fullscreen" },
     ];
 
     /* =============================================
