--- a/index.html
+++ b/index.html
@@ -1515,9 +1515,9 @@
       { name: "Game Snacks",            url: "https://gamesnacks.com/" },
       { name: "Polytrack",              url: "https://www.kodub.com/apps/polytrack" },
       { name: "Cat Mario",              url: "https://catmario.eu/" },
-      { name: "Among Us",               url: "https://scratch.mit.edu/projects/523967150/" },
-      { name: "PIXEL VALLEY Online",    url: "https://scratch.mit.edu/projects/551905179/" },
-      { name: "Getting Over It Online", url: "https://scratch.mit.edu/projects/390983761/" },
+      { name: "Among Us",               url: "https://turbowarp.org/523967150/fullscreen" },
+      { name: "PIXEL VALLEY Online",    url: "https://turbowarp.org/551905179/fullscreen" },
+      { name: "Getting Over It Online", url: "https://turbowarp.org/390983761/fullscreen" },
       { name: "Downgrade2 Online",      url: "https://turbowarp.org/1115559391/fullscreen?fps=60&clones=Infinity&limitless&hqpen&size=640x360" },
       { name: "portal (scratch)",       url: "https://turbowarp.org/1165334435/fullscreen" },
     ];
